--- a/client/src/components/groups/groups.css
+++ b/client/src/components/groups/groups.css
@@ -1,8 +1,8 @@
 .group {
-    height: 800px;
-    width: 450px;
-    left: 90px;
-    margin-top: 30px;
+    height: fit-content;
+    width: 22%;
+    left: 3%;
+    margin-top: 1.5rem;
     position: fixed;
     border-radius: 8px;
     box-shadow: 0px 2px 2px 4px rgba(0, 0, 0, 0.15);
@@ -16,7 +16,7 @@
 }
 
 .groupWrapper {
-    padding: 20px;
+    padding: 4%;
 }
 
 ::-webkit-scrollbar {
@@ -34,7 +34,7 @@
 }
 
 .line {
-    width: 400px;
+    width: 100%;
     color: grey;
 }
 
@@ -42,7 +42,7 @@
     color: #039;
     font-size: 20px;
     font-weight: bold;
-    padding: 8px;
+    padding: 1%;
     
 }
 
@@ -55,57 +55,62 @@
 
 .section-1 {
     color: #039;
-    font-size: 20px;
+    font-size: 100%;
     font-weight: bold;
-    padding: 5px;
+    padding: 1% 1% 0% 1%;
 }
 
 .section-2 {
     color: #039;
-    font-size: 20px;
+    font-size: 100%;
     font-weight: bold;
-    padding: 5px;
+    padding: 1% 1% 0% 1%;
 }
 
 .section-3 {
     color: #039;
-    font-size: 20px;
+    font-size: 100%;
     font-weight: bold;
-    padding: 5px;
+    padding: 1% 1% 0% 1%;
 }
 
 .club-1 {
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
     object-fit: cover;
-    padding: 5px;
+    padding: 1.5%;
 }
 
 .noBullets-1{
-    padding: 2px;
+    padding: 0%;
+    margin: 1%;
 }
 .noBullets-2{
-    padding: 2px;
+    padding: 0%;
+    margin: 1%;
+
 }
 .noBullets-3{
-    padding: 2px;
+    padding: 0%;
+    margin: 1%;
+
 }
 
 .club-2 {
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
     object-fit: cover;
-    padding: 5px;
+    padding: 1.5%;
 }
 
 .club-3 {
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
     object-fit: cover;
-    padding: 5px;
+    padding: 1.5%;
 }
 
 
@@ -132,24 +137,51 @@
 
 .scrollable-list-1 {
     overflow-y: scroll;
-    height: 150px;
+    height: 133px;
     width: 95%;
     padding: 0px;
-    margin: 5px;
+    margin: 1% 0% 0% 2.5%;
 }
 
 .scrollable-list-2 {
     overflow-y: scroll;
-    height: 150px;
+    height: 133px;
     width: 95%;
-    padding: 5px;
-    margin: 8px;
+    padding: 0%;
+    margin: 1% 0% 0% 2.5%;
 }
 
 .scrollable-list-3 {
     overflow-y: scroll;
-    height: 150px;
+    height: 133px;
     width: 95%;
-    padding: 5px;
-    margin: 8px;
+    padding: 0%;
+    margin: 1% 0% 0% 2.5%;
+}
+
+
+.initials1 {
+height: 37px;
+left: 23%;
+padding-left: 2%;
+position: absolute;
+top: 2%;
+width: 60%;
+}
+
+.initials .handleAccount1{
+font-weight: 300;
+font-size: x-small;
+}
+
+.initials .handleUsername1{
+font-weight: 400;
+}
+
+.shareProfileImg1 {
+width: 45px;
+height: 45px;
+border-radius: 50%;
+object-fit: cover; 
+padding: 2%;
 }
