--- a/client/src/components/groups/groups.css
+++ b/client/src/components/groups/groups.css
@@ -2,7 +2,7 @@
     height: fit-content;
     width: 18%;
     left: 2%;
-    margin-top: 1.5rem;
+    margin-top: 5vh;
     position: fixed;
     border-radius: 8px;
     box-shadow: 0px 2px 2px 4px rgba(0, 0, 0, 0.15);
