--- a/client/src/components/post/post.css
+++ b/client/src/components/post/post.css
@@ -1,22 +1,21 @@
 .post {
-  height: 750px;
-  width: 640px;
+  height: fit-content;
+  width: 86%;
   border-radius: 10px;
   box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
-  margin-left: 40px;
-  margin-top: 30px;
+  margin: 3% 0% 0% 0%;
   background: #F8F8F8;
 }
 
 .postWrapper {
-  padding: 20px;
+  padding: 1%;
 }
 
 .postTop {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px;
+  padding: 1% 3% 0% 3%;
 }
 
 .postTopLeft {
@@ -51,22 +50,28 @@
 }
 
 .postImg {
-  padding-right: 20px;
-  padding-top: 10px;
+  padding: 1% 0% 0% 0%;
   width: 100%;
   max-height: 500px;
   object-fit: contain;
 }
 
 .commentSection {
-  width: 100%;
-  height: 30px;
-  padding: auto;
-  border: none;
-  margin-top: 10px;
+  width: 96%;
+  padding: 0% 0% 1.5% 3%;
   font-size: 15px;
   background-color: #F8F8F8;
   border-radius: 20px;
+}
+
+.commentSection1 {
+  width: 96%;
+  padding: 0% 0% 0% 3%;
+  font-size: large;
+  height: 7vh;
+  background-color: #F8F8F8;
+  border-radius: 20px;
+  border: 1px solid #ccc;
 }
 
 .commentSection input:focus{
@@ -80,7 +85,7 @@
 }
 
 .postBottomLeft {
-  padding-top: 10px;
+  padding: 1% 0% 0% 4%;
   display: flex;
   flex-wrap: wrap;
 }
@@ -121,6 +126,9 @@
 }
 
 .postText{
-  margin-top: 10px;
-  margin-bottom: 10px;
+  padding: 1% 0% 1% 4%;
+}
+
+.imgcont{
+  padding: 0% 2% 0% 2%;
 }
