--- a/client/src/components/share/share.css
+++ b/client/src/components/share/share.css
@@ -1,46 +1,44 @@
 .share {
-  height: 250px;
-  width: 550px;
-  right: 90px;
-  top: 10px;
+  height: fit-content;
+  width: 30%;
+  right: 1.5%;
   position: fixed;
-  top: 48px;
+  margin-top: 5vh;
   border-radius: 8px;
   background-color: #F8F8F8;
   box-shadow: 0px 2px 2px 4px rgba(0, 0, 0, 0.15);
 }
 
 .shareWrapper {
-  padding: 10px;
+  padding: 2%;
 }
 
 
-.initials {
+.initials2 {
   height: 37px;
-  left: 84px;
-  padding-left: 10px;
+  left: 23%;
+  padding-left: 2%;
   position: absolute;
-  top: 33px;
-  width: 158px;
-}
+  top: 2%;
+  width: 60%;
+  }
 
-.initials .handleAccount{
+.handleAccount2{
   font-weight: 300;
   font-size: smaller;
-}
-
-.initials .handleUsername{
+  }
+  
+  .handleUsername2{
   font-weight: 400;
-}
+  }
 
-.shareProfileImg {
-  width: 50px;
-  height: 50px;
+.shareProfileImg2 {
+  width: 45px;
+  height: 45px;
   border-radius: 50%;
   object-fit: cover; 
-  padding: 15px;
+  padding: 2%;
 }
-
 
 .shareInput {
   border: none;
