--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -2,3 +2,19 @@
     display: flex;
     width: 100%;
 }
+
+.homeContainer2{
+    width: 10%;
+}
+
+.homecontainerflex1{
+    flex-grow: 1.6;
+}
+
+.homecontainerflex2{
+    flex-grow: 5.3;
+}
+
+.homecontainerflex3{
+    flex-grow: 3.1;
+}
