--- a/client/src/components/share/share.css
+++ b/client/src/components/share/share.css
@@ -16,10 +16,9 @@
 
 .initials2 {
   height: 37px;
-  left: 23%;
   padding-left: 2%;
   position: absolute;
-  top: 2%;
+  margin: 2.3% 0% 0% 16%;
   width: 60%;
   }
 
@@ -33,11 +32,12 @@
   }
 
 .shareProfileImg2 {
-  width: 45px;
-  height: 45px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   object-fit: cover; 
-  padding: 2%;
+  padding: 1%;
+  margin: 0% 0% 0% 2%;
 }
 
 .shareInput {
@@ -47,8 +47,8 @@
   text-align: left;
   border-radius: 32px;
   background: #D9D9D9;
-  padding: 15px;
-  margin: 10px;
+  padding: 2%;
+  margin: 1.7%;
 }
 
 
@@ -59,15 +59,25 @@
 }
 
 .shareOptions {
+  width: 5%;
+}
+
+.shareOptions1{
+  flex-grow: 9.6;
   display: flex;
-  margin-left: 20px;
-  margin-top: 20px;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0% 3% 0% 3%;
+}
+
+.shareOptions2{
+  flex-grow: 0.4;
 }
 
 .shareOption {
   display: flex;
   align-items: center;
-  margin-right: 30px;
   cursor: pointer;
 }
 
@@ -83,8 +93,6 @@
   border-radius: 50px;
   background: #039;
   font-weight: 500;
-  margin-right: 15px;
-  margin-top: 20px;
   cursor: pointer;
   color: white;
 }
