homepage css modified 2.0

--- a/client/src/pages/user_home/user_home.css
+++ b/client/src/pages/user_home/user_home.css
@@ -3,14 +3,18 @@
     width: 100%;
 }
 
-.homecontainer1{
+.homeContainer2{
     width: 10%;
 }
 
-.flexhomeContainer1{
+.homecontainerflex1{
     flex-grow: 1.6;
 }
 
-.flexhomeContainer2{
-    flex-grow: 8.4;
+.homecontainerflex2{
+    flex-grow: 5.3;
+}
+
+.homecontainerflex3{
+    flex-grow: 3.1;
 }
