--- a/client/src/components/share/share.css
+++ b/client/src/components/share/share.css
@@ -42,20 +42,27 @@
 
 .shareInput {
   border: none;
-  height: 45px;
-  width: 95%;
+  height: 90px;
+  max-height: 90px;
+  min-height: 90px;
+  width: 93%;
+  min-width: 93%;
+  max-width: 93%;
   text-align: left;
-  border-radius: 32px;
+  border-radius: 8px;
   background: #D9D9D9;
   padding: 2%;
   margin: 1.7%;
+}
+.shareInput:focus {
+  outline: none;
 }
 
 
 .shareBottom {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: left;
 }
 
 .shareOptions {
@@ -67,7 +74,8 @@
   display: flex;
   flex-flow: row wrap;
   align-items: center;
-  justify-content: space-between;
+  justify-content: left;
+  gap: 15px;
   padding: 0% 3% 0% 3%;
 }
 
@@ -95,4 +103,8 @@
   font-weight: 500;
   cursor: pointer;
   color: white;
+}
+
+input{
+  visibility: hidden;
 }
